# research

./: .gitignore  README.md
collisions/: README.md
compilation/: ucc.ipynb
ds_zne/: README.md
lre/: README.md  layerwise_richardson_extrapolation.ipynb
mitiq-stress-test/: cache_utils.py  ibmq-backends.ipynb  lre-tests.ipynb  requirements.txt  square-heisenberg-25.qasm
mitiq-stress-test/results/: cached_results.csv  cached_results_og.csv  qft-4_02-06-25_results.csv  square-heisenberg-4_02-06-25.csv
nepec/: README.md
nepec/exact-nepec-representations/: exact_nepec_representations.ipynb
nepec/mitiq-qiskit-pec-nepec/: mitiq-qiskit-zne-pec-nepec.ipynb
nepec/noise-agnostic-pec/: noise_agnostic_pec.ipynb
nepec/probabilistic-error-reduction-and-virtual-zne/: probabilistic_error_reduction.ipynb
qem-on-hardware/: README.md  requirements.txt
qrack-report/: README.md
ucc-hw-aware/: pyproject.toml  ucc-fake-torino.ipynb  ucc_ionq.ipynb
